--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Royal Canadian Mounted Police -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: 'Benton of the Royal Mounted: A Tale of the Royal Northwest Mounted Police'
 url: http://www.gutenberg.org/ebooks/41889
